# ReaCoMa

./: .clang-format  .gitignore  .gitmodules  compile_commands.json  mise.toml
.github/workflows/: deploy-release.yaml  nightly.yaml  release.yaml
ReacomaExtension/: CMakeLists.txt  ReacomaExtension.cpp  ReacomaExtension.h  ReacomaTheme.h  VectorBufferAdaptor.cpp
ReacomaExtension/Algorithms/: AmpGateAlgorithm.cpp  AmpSliceAlgorithm.cpp  AmpSliceAlgorithm.h  FlucomaAlgorithmBase.h  HPPSAlgorithm.cpp  NMFAlgorithm.cpp  NoveltyFeatureAlgorithm.cpp  NoveltyFeatureAlgorithm.h  NoveltySliceAlgorithm.cpp  NoveltySliceAlgorithm.h  OnsetSliceAlgorithm.cpp  ProcessingJob.cpp  ProcessingJob.h  SlicingAlgorithm.h  TransientAlgorithm.cpp  TransientSliceAlgorithm.cpp
ReacomaExtension/Components/: ReacomaButton.cpp  ReacomaButton.h  ReacomaDropdown.cpp  ReacomaDropdown.h  ReacomaParamTextControl.cpp  ReacomaParamTextControl.h  ReacomaProgressBar.cpp  ReacomaProgressBar.h  ReacomaSegmented.cpp  ReacomaSegmented.h  ReacomaSlider.cpp  ReacomaSlider.h
ReacomaExtension/TestProject/: ReacomaExtension.RPP
